--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
@@ -16,7 +16,7 @@
                                         <strong>MOGILEVZAGS</strong>
                                     </p>
                                     <h1 class="display-1 text-white mb-4 animated slideInRight">Регистрация брака</h1>
-                                    <a href=""
+                                    <a href="/Clients/Index"
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight">Перейти</a>
                                 </div>
                             </div>
@@ -32,7 +32,7 @@
                                     <p class="fs-4 text-white animated slideInLeft">Добро пожаловать на сайт <strong>MOGILEVZAGS</strong>
                                     </p>
                                     <h1 class="display-1 text-white mb-5 animated slideInLeft">Регистрация развода</h1>
-                                    <a href=""
+                                    <a href="/Client1/Index"
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Перейти</a>
                                 </div>
                             </div>
