--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
@@ -58,6 +58,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Contacts">Контакты</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Еще</a>
+                                <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
+                                    <a class="dropdown-item" asp-page="#">Функция1</a>
+                                    <a class="dropdown-item" asp-page="#">Функция2</a>
+                                    <a class="dropdown-item" asp-page="#">Функция3</a>
+                                    <a class="dropdown-item" asp-page="#">Функция4</a>
+                                    <a class="dropdown-item" asp-page="#">Функция5</a>
+                                </div>
+                        </li>
+                            
                     </ul>
                 </div>
             </div>
@@ -81,11 +92,10 @@
                 </div>
                 <div class="col-lg-3 col-md-6 link-decor" >
                     <h4 class="text-white mb-4">Быстрые ссылки</h4>
-                    <a class="btn btn-link" href="/Privacy">О нас</a>
-                    <a class="btn btn-link" href="">Связь с нами</a>
-                    <a class="btn btn-link" href="">Наши услуги</a>
-                    <a class="btn btn-link" href="">Условия и положения</a>
-                    <a class="btn btn-link" href="">Поддержка</a>
+                    <a class="btn btn-link" asp-page="/Privacy">О нас</a>
+                    <a class="btn btn-link" asp-page="/Contacts">Связь с нами</a>
+                    <a class="btn btn-link" asp-page="/Privacy">Наши услуги</a>
+                    <a class="btn btn-link" asp-page="/Privacy">Условия оказания услуг</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Часы работы</h4>
