added list of clients

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
@@ -16,7 +16,7 @@
                                         <strong>MOGILEVZAGS</strong>
                                     </p>
                                     <h1 class="display-1 text-white mb-4 animated slideInRight">Регистрация брака</h1>
-                                    <a href="/Clients/Index"
+                                    <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight">Перейти</a>
                                 </div>
                             </div>
@@ -32,7 +32,7 @@
                                     <p class="fs-4 text-white animated slideInLeft">Добро пожаловать на сайт <strong>MOGILEVZAGS</strong>
                                     </p>
                                     <h1 class="display-1 text-white mb-5 animated slideInLeft">Регистрация развода</h1>
-                                    <a href="/Client1/Index"
+                                    <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Перейти</a>
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                     <h2 class="mb-4">Вы можете написать нам нажав на кнопку ниже</h2>
                     <div class="row g-3">
                         <div class="col-12 text-center">
-                          <a asp-page="/Contacts"> <button class="btn btn-primary w-100 py-3" type="submit">Написать</button></a>  
+                          <a asp-page="/Contacts"> < class="btn btn-primary w-100 py-3" type="submit">Написать</></a>  
                         </div>
                     </div>
                 </div>
