--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Privacy.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Privacy.cshtml
@@ -30,7 +30,7 @@
                         <h1 class="display-6 mb-4">Сайт предварительной онлайн-записи в органы ЗАГСа Республики Беларусь на регистрацию заключения или расторжения брака.</h1>
                         <p class="mb-4">
                             <ul class="nav nav-about">
-                                <p>Задачи веб-портала:</p>
+                                Задачи веб-портала:
                                 <li class="nav-item nav-tasks">Предоставить молодоженам информацию о наличии свободного времени для регистрации брака в органах ЗАГСа Республики Беларусь.</li>
                                 <li class="nav-item nav-tasks">Обеспечить возможность выбора и предварительного бронирования дат и времени регистрации брака через Интернет.</li>
                                 <li class="nav-item nav-tasks">Перевести в электронный формат процесс взаимодействия с органами ЗАГСа в части предварительной записи на регистрацию или расторжение брака.</li>
@@ -65,9 +65,11 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded overflow-hidden pb-4">
-                        <img class="img-fluid mb-4" src="~/img/spec-3.jpg" alt="">
+                        <img class="img-fluid mb-4" src="img/team-1.jpg" alt="">
                         <h5>Оношко Галина Михайловна</h5>
                         <span class="text-primary">Начальник</span>
+                        <span class="text-primary">Кабинет №7</span>
+                        <span class="text-primary">Телефон: +375 222 79 10 13</span>
                         <ul class="team-social">
                             <li><a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a></li>
                             <li><a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a></li>
@@ -77,9 +79,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden pb-4">
-                        <img class="img-fluid mb-4" src="~/img/spec-6.jpg" alt="">
-                        <h5>Жданова Ирина Витальевна</h5>
-                        <span class="text-primary">Главный специалист</span>
+                        <img class="img-fluid mb-4" src="img/team-2.jpg" alt="">
+                        <h5>Андрей Петров</h5>
+                        <span class="text-primary">(должности)</span>
                         <ul class="team-social">
                             <li><a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a></li>
                             <li><a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a></li>
@@ -89,9 +91,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded overflow-hidden pb-4">
-                        <img class="img-fluid mb-4" src="~/img/spec-7.jpg" alt="">
-                        <h5>Петров Виктор Николаевич</h5>
-                        <span class="text-primary">Главный специалист</span>
+                        <img class="img-fluid mb-4" src="img/team-3.jpg" alt="">
+                        <h5>Василий Поддубный</h5>
+                        <span class="text-primary">(должность)</span>
                         <ul class="team-social">
                             <li><a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a></li>
                             <li><a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a></li>
@@ -101,9 +103,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item rounded overflow-hidden pb-4">
-                        <img class="img-fluid mb-4" src="~/img/spec-8.jpg" alt="">
-                        <h5>Лукашов Игорь Олегович</h5>
-                        <span class="text-primary">Заместитель начальника</span>
+                        <img class="img-fluid mb-4" src="img/team-4.jpg" alt="">
+                        <h5>Алексей Шнайдер</h5>
+                        <span class="text-primary">(должность)</span>
                         <ul class="team-social">
                             <li><a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a></li>
                             <li><a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a></li>
