WIP: fixed styles location

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Clients/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Clients/Index.cshtml
@@ -22,15 +22,15 @@
         @foreach (var item in Model.ListClients)
         {
             <tr>
-                <td>@item.name</td>
-                <td>@item.secondname</td>
-                <td>@item.surname</td>
-                <td>@item.phone</td>
-                <td>@item.created_at</td>
-                <th>@item.typeOfOperation</th>
+                <td>@item.Name</td>
+                <td>@item.SecondName</td>
+                <td>@item.Surname</td>
+                <td>@item.Phone</td>
+                <td>@item.CreatedAt</td>
+                <th>@item.TypeOfOperation</th>
                 <td>
-                    <a class="btn btn-primary btn-sm" href="/Clients/Edit?id=@item.id">Edit</a>
-                    <a class="btn btn-danger btn-sm" href="/Clients/Delete?id=@item.id">Delete</a>
+                    <a class="btn btn-primary btn-sm" href="/Clients/Edit?id=@item.Id">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="/Clients/Delete?id=@item.Id">Delete</a>
                 </td>
             </tr>
         }
