--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
@@ -113,7 +113,7 @@
                     <h2 class="mb-4">Вы можете написать нам нажав на кнопку ниже</h2>
                     <div class="row g-3">
                         <div class="col-12 text-center">
-                          <a asp-page="/Contacts"> < class="btn btn-primary w-100 py-3" type="submit">Написать</></a>  
+                          <a asp-page="/Contacts"> <a class="btn btn-primary w-100 py-3" type="submit">Написать</a></a>  
                         </div>
                     </div>
                 </div>
