--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
@@ -11,7 +11,7 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
-                                <div class="col-lg-7 text-start">
+                                <div class="col-lg-6 text-start">
                                     <p class="fs-4 text-white animated slideInRight">Добро пожаловать на сайт
                                         <strong>MOGILEVZAGS</strong>
                                     </p>
@@ -113,7 +113,7 @@
                     <h2 class="mb-4">Вы можете написать нам нажав на кнопку ниже</h2>
                     <div class="row g-3">
                         <div class="col-12 text-center">
-                          <a asp-page="/Contacts"> <a class="btn btn-primary w-100 py-3" type="submit">Написать</a></a>  
+                          <a asp-page="/Contacts" class="btn btn-primary w-100 py-3" type="submit">Написать</a>
                         </div>
                     </div>
                 </div>
