--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Client1/Create.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Client1/Create.cshtml
@@ -19,31 +19,31 @@
     <div class="row mb-3"> 
       <label class="col-sm-3 col-form-label">Имя</label>
       <div class="col-sm-6">
-          <input type="text" class="form-control"  name="name" value="@Model.client1Info.name">
+          <input type="text" class="form-control"  name="name" value="@Model.clientInfo.Name">
       </div>
     </div>
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Фамилия</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" name="surname" value="@Model.client1Info.surname">
+            <input type="text" class="form-control" name="surname" value="@Model.clientInfo.Patronymic">
         </div>
     </div>
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Отчество</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" name="secondname" value="@Model.client1Info.secondname">
+            <input type="text" class="form-control" name="secondname" value="@Model.clientInfo.SecondName">
         </div>
     </div>
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" name="Email" value="@Model.client1Info.email">
+            <input type="text" class="form-control" name="Email" value="@Model.clientInfo.Email">
         </div>
     </div>
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Мобильный телефон</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" name="phone" value="@Model.client1Info.phone">
+            <input type="text" class="form-control" name="phone" value="@Model.clientInfo.Phone">
         </div>
     </div>
     @*<div class="row mb-3">
