--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Clients/Create.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Clients/Create.cshtml
@@ -26,7 +26,7 @@
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Фамилия</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" name="surname" value="@Model.clientInfo.Surname">
+            <input type="text" class="form-control" name="surname" value="@Model.clientInfo.Patronymic">
         </div>
     </div>
     <div class="row mb-3">
