--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Clients/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Clients/Index.cshtml
@@ -9,8 +9,8 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Имя</th>
             <th>Фамилия</th>
+            <th>Имя</th>
             <th>Отчество</th>
             <th>Телефон</th>
             <th>Дата создания заявки</th>
@@ -22,14 +22,13 @@
         @foreach (var item in Model.ListClients)
         {
             <tr>
+                <td>@item.Patronymic</td>
                 <td>@item.Name</td>
                 <td>@item.SecondName</td>
-                <td>@item.Surname</td>
                 <td>@item.Phone</td>
                 <td>@item.CreatedAt</td>
                 <th>@item.TypeOfOperation</th>
                 <td>
-                    <a class="btn btn-primary btn-sm" href="/Clients/Edit?id=@item.Id">Edit</a>
                     <a class="btn btn-danger btn-sm" href="/Clients/Delete?id=@item.Id">Delete</a>
                 </td>
             </tr>
