--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Client1/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Client1/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>
                     <form method="post">
                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        <input type="hidden" value="@item.Id">
+                        <input type="hidden" name="id" value="@item.Id">
                     </form>
                 </td>
             </tr>
