prices and conditions added

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/wwwroot/css/style.css
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/wwwroot/css/style.css
@@ -619,3 +619,9 @@ body {
 .link-decor a{
 text-decoration: none;
 }
+
+.prices-table {
+    border: 2px solid black;
+    border-collapse: collapse;
+
+}
