--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
@@ -63,9 +63,8 @@
                                 <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
                                     <a class="dropdown-item" asp-page="/AllClients/Index">Все клиенты</a>
                                     <a class="dropdown-item" asp-page="/Employees/Index">Сотрудники</a>
-                                    <a class="dropdown-item" asp-page="#">Функция3</a>
-                                    <a class="dropdown-item" asp-page="#">Функция4</a>
-                                    <a class="dropdown-item" asp-page="#">Функция5</a>
+                                    <a class="dropdown-item" asp-page="/Prices">Тарифы</a>
+                                    <a class="dropdown-item" asp-page="/Conditions">Условия</a>
                                 </div>
                         </li>
                     </ul>
