Added Contact Form Logic

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Contacts.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Contacts.cshtml
@@ -29,23 +29,23 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="mb-4">Вы можете оставить свое сообщение в форме ниже</h3>
                     <p class="mb-4"> </p>
-                    <form>
+                    <form method="post">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                    <input type="text" class="form-control" name="Name" placeholder="Your Name">
                                     <label for="name">Ваше имя</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                    <input type="email" class="form-control" name="Email" placeholder="Your Email">
                                     <label for="email">Ваш Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                    <textarea class="form-control" placeholder="Leave a message here" name="Message" style="height: 100px"></textarea>
                                     <label for="message">Сообщение</label>
                                 </div>
                             </div>
