fixed arrows and button links

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Index.cshtml
@@ -11,12 +11,13 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
-                                <div class="col-lg-6 text-start">
+                                <div class="col-lg-6 text-start" style="padding-left:150px;
+                                                                        padding-right:150px;">
                                     <p class="fs-4 text-white animated slideInRight">Добро пожаловать на сайт
                                         <strong>MOGILEVZAGS</strong>
                                     </p>
                                     <h1 class="display-1 text-white mb-4 animated slideInRight">Регистрация брака</h1>
-                                    <a href=""
+                                    <a asp-page="/Clients/Index"
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight">Перейти</a>
                                 </div>
                             </div>
@@ -28,11 +29,12 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-end">
-                                <div class="col-lg-7 text-end">
+                                <div class="col-lg-7 text-end" style="padding-left:150px;
+                                                                        padding-right:150px;">
                                     <p class="fs-4 text-white animated slideInLeft">Добро пожаловать на сайт <strong>MOGILEVZAGS</strong>
                                     </p>
                                     <h1 class="display-1 text-white mb-5 animated slideInLeft">Регистрация развода</h1>
-                                    <a href=""
+                                    <a asp-page="/Client1/Index"
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Перейти</a>
                                 </div>
                             </div>
