WIP: Added authentication and authorization
-Added login and register pahes
-Added policy for admin pages
-Added access denied page
-Added role separation
-Added creation of employee user while creating just an employee

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Employees/Create.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Employees/Create.cshtml
@@ -22,40 +22,53 @@
           <input type="text" class="form-control"  name="name" value="@Model.employeeInfo.Name">
       </div>
     </div>
+
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Фамилия</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="patronymic" value="@Model.employeeInfo.Patronymic">
         </div>
     </div>
+
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Отчество</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="secondname" value="@Model.employeeInfo.SecondName">
         </div>
     </div>
+
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="Email" value="@Model.employeeInfo.Email">
         </div>
     </div>
+
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Мобильный телефон</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="phone" value="@Model.employeeInfo.Phone">
         </div>
     </div>
+
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Местоположение пункта</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="location" value="@Model.employeeInfo.Location">
         </div>
     </div>
+
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Должность</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="position">
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Пароль</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" name="password">
         </div>
     </div>
     
