--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                                     <a class="dropdown-item" asp-page="/AllClients/Index">Все клиенты</a>
                                     <a class="dropdown-item" asp-page="/Employees/Index">Сотрудники</a>
                                     <a class="dropdown-item" asp-page="/Prices">Тарифы</a>
-                                    <a class="dropdown-item" asp-page="/Conditions">Условия</a>
+                                    <a class="dropdown-item" asp-page="/Сonditions">Условия</a>
                                 </div>
                         </li>
                     </ul>
