Conditions and AccessDenied fixed

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/AllClients/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/AllClients/Index.cshtml
@@ -11,6 +11,7 @@
             <th>Имя</th>            
             <th>Отчество</th>
             <th>Тип заявки</th>
+            <th>Действие</th>
         </tr>
     </thead>
     <tbody>
