--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Employees/Index.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Employees/Index.cshtml
@@ -12,6 +12,7 @@
             <th>Отчество</th>
             <th>Должность</th>
             <th>Местоположение</th>
+            <th>Действие</th>
         </tr>
     </thead>
     <tbody>
