--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Сonditions.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Сonditions.cshtml
@@ -17,7 +17,15 @@
 </div>
 <!-- Page Header End -->
 <span>
-    Регистрация брака
+    Прием граждан:
+
+ул. Ленинская, 1, каб. 1, тел. +375 222 79 10 22
+Шевцова Ольга Александровна - заведующий сектором по ведению регистра населения
+Рубацкая Ирина Николаевна - главный специалист сектора по ведению регистра населения
+
+Предварительная запись на подачу заявления о регистрации заключения брака осуществляется 
+
+- через онлайн форму по адресу mogilev.zags.by
 </span>
 
 <span>
