--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Auth/AccessDenied.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Auth/AccessDenied.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div>
-    <h1>Access Denied</h1>
-    You don't have access to the page you are looking for.
+    <h1>Доступ запрещен</h1>
+    У вас нет доступа к этой странице.
 </div>
