WIP: Added login state and logout button

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/Pages/Shared/_Layout.cshtml
@@ -69,6 +69,11 @@
                         </li>
                     </ul>
                 </div>
+
+                <div class="mr-2">
+                    <partial name="_LoginStatusPartial" />
+
+                </div>
             </div>
         </nav>
     </header>
